--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FashMe"
         tools:targetApi="31">
+        <activity android:name=".WardrobeActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
