--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +19,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FashMe"
         tools:targetApi="31">
+        <activity android:name=".RewievOutfitActivity" />
+        <activity android:name=".GenerateOutfitActivity" />
+        <activity android:name=".CreateClothActivity" />
         <activity android:name=".WardrobeActivity" />
         <activity
             android:name=".MainActivity"
